main case study content added in design walkthrough section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
       </a>
     </div>
 
+    <div class="container">
+      <a href="mesh.html">
+        <img class="cover" src="assets/images/cover4.jpg">
+        <div class="overlay color1"></div>
+        <h2 class="year">2021</h2>
+        <h2 class="type">University Design Project</h2>
+        <h2 class="covertitle">Connecting outdoor climbing communities</h2>
+      </a>
+    </div>
+
     <!-- <div class="container">
       <a href="ods.html">
       <img class="cover" src="assets/images/cover2.png">
